--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "pdf-reader",
   "private": true,
-  "version": "0.0.0",
+  "version": "5.2.0",
   "main": "electron/main.js",
   "build": {
     "appId": "com.your-website.your-app",
-    "productName": "ElectronApp",
-    "copyright": "Copyright 2022 <your-name>",
+    "productName": "JJ赛",
+    "copyright": "Copyright 2022 JJ赛",
     "mac": {
       "category": "public.app-category.utilities"
+    },
+    "win": {
+      "target": "nsis"
     },
     "nsis": {
       "oneClick": false,
@@ -29,7 +32,7 @@
     "preview": "vite preview",
     "electron": "wait-on tcp:5173 && cross-env NODE_ENV=development electron .",
     "electron:serve": "concurrently -k \"npm run dev\" \"npm run electron\"",
-    "electron:build": "npm run build && electron-builder"
+    "electron:build": "npm run build && electron-builder -w"
   },
   "dependencies": {
     "vue": "^3.5.10"
