--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "preview": "vite preview",
     "electron": "wait-on tcp:5173 && cross-env NODE_ENV=development electron .",
     "electron:serve": "concurrently -k \"npm run dev\" \"npm run electron\"",
-    "electron:build": "npm run build && electron-builder -w"
+    "electron:build": "npm run build && electron-builder"
   },
   "dependencies": {
     "vue": "^3.5.10"
